[gd_scene load_steps=17 format=3 uid="uid://wehe1pyj8jbn"]

[ext_resource type="Script" path="res://scripts/LevelManager.gd" id="1_c5fbj"]
[ext_resource type="PackedScene" uid="uid://btmixqkw76nko" path="res://scenes/GenTest/MurVertical.tscn" id="2_sb3ag"]
[ext_resource type="PackedScene" uid="uid://b4h1lkpwl4hrs" path="res://scenes/GenTest/MurHorizontal.tscn" id="3_p111r"]
[ext_resource type="PackedScene" uid="uid://dvbdupvebwhq5" path="res://scenes/GenTest/MapSpawn.tscn" id="4_rrlwf"]
[ext_resource type="PackedScene" uid="uid://bmx4akp13eyvn" path="res://scenes/generator.tscn" id="5_ltpid"]
[ext_resource type="PackedScene" uid="uid://hpw6u7lu2wns" path="res://scenes/hunter.tscn" id="6_5wv72"]
[ext_resource type="Texture2D" uid="uid://cod6sr7un2kjn" path="res://assets/terrain_real.png" id="7_bcm8c"]
[ext_resource type="PackedScene" uid="uid://dax08101yn5p7" path="res://scenes/player.tscn" id="8_36tfu"]
[ext_resource type="FontFile" uid="uid://d1cu1o4a8hlpj" path="res://assets/fonts/Joystick.ttf" id="9_ouxca"]
[ext_resource type="Texture2D" uid="uid://bvbb4ye16vi5c" path="res://assets/cow_counter_face_alive.png" id="10_lb57e"]
[ext_resource type="Texture2D" uid="uid://b76ybdefmsubh" path="res://assets/Victory pannels/Alien_victory_screen.png" id="11_hguqj"]
[ext_resource type="Texture2D" uid="uid://pxjdmnrrvlsy" path="res://assets/Victory pannels/cows_victory_screen.png" id="12_isni4"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_msbio"]
size = Vector2(50, 1121)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_8m07d"]
size = Vector2(1814, 68)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_2s235"]
size = Vector2(59, 1119)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_cnap8"]
size = Vector2(1874, 73)

[node name="Lvl3" type="Node2D"]
script = ExtResource("1_c5fbj")

[node name="MurVertical" parent="." instance=ExtResource("2_sb3ag")]
position = Vector2(786, 316)

[node name="MurVertical2" parent="." instance=ExtResource("2_sb3ag")]
position = Vector2(778, 757)

[node name="MurHorizontal" parent="." instance=ExtResource("3_p111r")]
position = Vector2(373, 281)

[node name="MurHorizontal2" parent="." instance=ExtResource("3_p111r")]
position = Vector2(2567, 1400)

[node name="MurHorizontal3" parent="." instance=ExtResource("3_p111r")]
position = Vector2(622, 285)

[node name="MurHorizontal4" parent="." instance=ExtResource("3_p111r")]
position = Vector2(112, 785)

[node name="MurHorizontal5" parent="." instance=ExtResource("3_p111r")]
position = Vector2(362, 787)

[node name="VacheSpawn" parent="." instance=ExtResource("4_rrlwf")]

[node name="generator" parent="." instance=ExtResource("5_ltpid")]
position = Vector2(1418, 826)

[node name="generator2" parent="." instance=ExtResource("5_ltpid")]
position = Vector2(1676, 32)

[node name="generator3" parent="." instance=ExtResource("5_ltpid")]
position = Vector2(18, -18)

[node name="generator4" parent="." instance=ExtResource("5_ltpid")]
position = Vector2(4, 453)

[node name="hunter" parent="." instance=ExtResource("6_5wv72")]
position = Vector2(1051, 611)

[node name="Ground" type="Sprite2D" parent="."]
z_index = -3
position = Vector2(967, 534)
scale = Vector2(0.7, 0.7)
texture = ExtResource("7_bcm8c")

[node name="player" parent="." instance=ExtResource("8_36tfu")]
position = Vector2(1502, 651)
id = 2

[node name="player2" parent="." instance=ExtResource("8_36tfu")]
position = Vector2(992, 92)
id = 3

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2(959, 538)

[node name="walls" type="StaticBody2D" parent="."]
position = Vector2(370, 235)
collision_layer = 7
collision_mask = 7

[node name="CollisionShape2D" type="CollisionShape2D" parent="walls"]
position = Vector2(-336, 270)
shape = SubResource("RectangleShape2D_msbio")

[node name="CollisionShape2D2" type="CollisionShape2D" parent="walls"]
position = Vector2(577, -261)
shape = SubResource("RectangleShape2D_8m07d")

[node name="CollisionShape2D3" type="CollisionShape2D" parent="walls"]
position = Vector2(1510.5, 266.5)
shape = SubResource("RectangleShape2D_2s235")

[node name="CollisionShape2D4" type="CollisionShape2D" parent="walls"]
position = Vector2(600, 854)
shape = SubResource("RectangleShape2D_cnap8")

[node name="PlayerCounter" type="Label" parent="."]
z_index = 3
offset_left = 1243.0
offset_top = 9.0
offset_right = 1528.0
offset_bottom = 81.0
theme_override_colors/font_color = Color(0.94902, 0.988235, 0.141176, 1)
theme_override_colors/font_outline_color = Color(1, 1, 1, 1)
theme_override_constants/outline_size = 20
theme_override_fonts/font = ExtResource("9_ouxca")
theme_override_font_sizes/font_size = 50
horizontal_alignment = 2
vertical_alignment = 1

[node name="CowCounterFaceAlive" type="Sprite2D" parent="."]
z_index = 3
position = Vector2(1466, 31)
scale = Vector2(0.1, 0.1)
texture = ExtResource("10_lb57e")

[node name="DayTimer" type="Timer" parent="."]
wait_time = 8.0
one_shot = true

[node name="TransitionTimer" type="Timer" parent="."]
one_shot = true

[node name="player3" parent="." instance=ExtResource("8_36tfu")]
position = Vector2(143, 888)
id = 4

[node name="EndTimer" type="Timer" parent="."]
wait_time = 2.5
one_shot = true

[node name="AlienVictoryScreen" type="Sprite2D" parent="."]
visible = false
z_index = 4
position = Vector2(958, 540)
scale = Vector2(0.5, 0.5)
texture = ExtResource("11_hguqj")

[node name="CowsVictoryScreen" type="Sprite2D" parent="."]
visible = false
z_index = 4
position = Vector2(958, 540)
scale = Vector2(0.5, 0.5)
texture = ExtResource("12_isni4")

[node name="MurVertical3" parent="." instance=ExtResource("2_sb3ag")]
position = Vector2(1674, 757)

[node name="MurHorizontal6" parent="." instance=ExtResource("3_p111r")]
position = Vector2(1510, 830)

[connection signal="timeout" from="DayTimer" to="." method="_on_day_timer_timeout"]
[connection signal="timeout" from="TransitionTimer" to="." method="_on_transition_timer_timeout"]
[connection signal="timeout" from="EndTimer" to="." method="_on_end_timer_timeout"]
